syntax = "proto3";

option java_multiple_files = true;
option java_package = "goapiboilerplate.grpc.auth";
option java_outer_classname = "AuthProto";

package proto;

// AuthenticationService handles auth token verification
service AuthenticationService {
  rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse);
}

// VerifyTokenRequest is passed when dispatching
message VerifyTokenRequest {
  string token = 1;
}

// VerifyTokenResponse return auth token information after successfull verification
message VerifyTokenResponse {
  int64 expiresIn = 1;
  string clientId = 2;
  string userId = 3;
}
